...
    <string name="title_dictionary">Dictionary</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_photo">Photo</string>
    <string name="title_profile">Profile</string>


    <string name="str_logout">Log Out</string>
    <string name="str_delete_user">Delete User</string>
    <string name="str_edit_profile">Edit Profile</string>

    <string name="str_warning">Warning</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>

    <string name="str_generic_error">There is a problem. Try later</string>

    <string name="str_generic_backend_error">There is a problem with connection. Try later</string>

    <!-- start region - onboard -->
...
    <string name="str_surname_hint">Surname</string>
    <string name="str_mail_hint">E-Mail</string>
    <string name="str_password_hint">Password</string>
    <string name="str_repeat_password_hint">Repeat Password</string>
    <string name="str_login_text">Do you already have an account?</string>
    <string name="str_signup_text">You don\'t have an account?</string>
    <string name="str_login_button">Log In</string>
    <string name="str_forgot_password"><u>Password Forgotten?</u></string>
    <string name="str_password_no_match">Passwords do not match!</string>
    <string name="str_no_mail">Please, insert a valid e-mail.</string>
    <string name="str_credential_not_valid">Credential is not valid.</string>
    <string name="str_no_password">Please, insert a valid password.</string>
    <string name="str_password_not_valid">Specified password is not valid. The password must contains at least 8 characters, one lower-case, one upper-case, one number and one special character. It cannot contains spaces.</string>
...

    <!-- fine regione - dizionario -->

    <!-- inizio regione - photo -->

    <string name="str_choose_photo">Choose</string>
    <string name="str_choose_photo_message">Click LOAD to load an existing photo. Click TAKE to take a new photo via phone camera.</string>
    <string name="str_load_photo">Load</string>
    <string name="str_take_photo">Take</string>
    <string name="str_identify">Identify</string>
    <string name="str_first_result">First Result</string>
    <string name="str_first_confidence">First Confidence</string>
    <string name="str_second_result">Second Result</string>
    <string name="str_second_confidence">Second Confidence</string>
    <string name="str_third_result">Third Result</string>
    <string name="str_third_confidence">Third Confidence</string>
    <string name="str_not_flower">This is not a flower!</string>
    <string name="str_confidence">Confidence: %s</string>

    <!-- fine regione - photo -->

    <!-- inizio regione - profilo -->

...
