<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.photo.PhotoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout_photoImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_view_height"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout_identificationResults"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/photoImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_baseline_image_placeholder_208dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_identificationResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/photoProgressBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout_photoImageView">

                <TextView
                    android:id="@+id/textViewFirstResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:textColor="@color/primary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/str_first_result"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/textViewFirstConfidence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="@string/str_first_confidence"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/textViewSecondResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:textColor="@color/primary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/str_second_result"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/textViewSecondConfidence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="@string/str_second_confidence"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/textViewThirdResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:textColor="@color/primary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/str_third_result"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/textViewThirdConfidence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="@string/str_third_confidence"
                    android:visibility="invisible"/>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/photoProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@id/choosePhotoButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_identificationResults" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/choosePhotoButton"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="@dimen/nav_bar_height"
                android:text="@string/str_choose_photo"
                android:textAlignment="center"
                android:textSize="16sp"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/identifyButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photoProgressBar" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/identifyButton"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="@dimen/nav_bar_height"
                android:text="@string/str_identify"
                android:textAlignment="center"
                android:textSize="16sp"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/choosePhotoButton"
                app:layout_constraintTop_toBottomOf="@+id/photoProgressBar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
